BZ-2: добавлено чтение сообщений из топика

--- a/internal/config/operation/testdata/valid_operations.yaml
+++ b/internal/config/operation/testdata/valid_operations.yaml
@@ -21,6 +21,8 @@ connections: # соединения для получения сообщений
     address: "amqp://user:password@localhost:1234/"
     queue: notes
     routing_key: create
+    insert_timeout: 1
+    read_timeout: 1
 
 storages: # куда сохранять модели
   - name: "postgres_notes" # куда сохранять
