--- a/config.example.yaml
+++ b/config.example.yaml
@@ -14,3 +14,24 @@ storage:
     db_name: "test"    
     insert_timeout: 50
     read_timeout: 50
+
+# пример конфигурации для одиночного Redis
+  redis:
+    type: "single"
+    host: "localhost"
+    port: 6379
+    insert_timeout: 50
+    read_timeout: 50
+
+# пример конфигурации для кластерного Redis
+  # redis:
+  #   type: "cluster"
+  #   insert_timeout: 50
+  #   read_timeout: 50
+  #   addrs:
+  #     - "localhost:7001"
+  #     - "localhost:7002"
+  #     - "localhost:7003"
+  #     - "localhost:7004"
+  #     - "localhost:7005"
+  #     - "localhost:7006"
