--- a/.github/workflows/vet.yaml
+++ b/.github/workflows/vet.yaml
@@ -14,11 +14,8 @@ jobs:
           with:
             go-version: '1.24'
             
-        - name: Verify dependencies
-          run: go mod verify
-    
-        - name: Run go vet
-          run: go vet ./...
+        - name: Verify dependencies && check go.mod
+          run: make check
 
         - name: Install linters
           run: make install-linters
