--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,16 @@
 name: Docker Image CI
 
 on:
-  push:
+  push: # запуск только на не основных ветках
+    branches-ignore:
+      - main
+      - develop
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . -t pull_request:$(date +%s)
