--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,9 @@
-name: go vet test
+name: Check, Lint, Test and Build
 
 on:
-  push: # запуск только на не основных ветках
-    branches-ignore:
+  push:
+    branches:
       - main
-      - develop
 
 jobs:
     audit:
@@ -13,7 +12,7 @@ jobs:
         - uses: actions/checkout@v4
     
         - name: Set up Go
-          uses: actions/setup-go@v4
+          uses: actions/setup-go@v5
           with:
             go-version: '1.24'
             
@@ -32,10 +31,19 @@ jobs:
           - uses: actions/checkout@v4
 
           - name: Set up Go
-            uses: actions/setup-go@v4
+            uses: actions/setup-go@v5
             with:
               go-version: '1.24'
 
           - name: Test
             run: go test -gcflags="-l" -race -v ./...
-    
+
+     # тестовый билд образа
+    build:
+      runs-on: ubuntu-latest     
+      steps:
+      - uses: actions/checkout@v4
+      - name: Build the Docker image
+        run: docker build . -t pull_request:$(date +%s)
+
+   # далее здесь будут pytests и обновление стенда
